--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-sqs": "^3.370.0"
+    "@aws-sdk/client-sqs": "^3.370.0",
+    "highland": "^2.13.5"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
